--- a/css/styles.css
+++ b/css/styles.css
@@ -115,6 +115,11 @@ z-index: -99px;
 -ms-transition: all 0.5s ease-in-out;
 transition: all 0.5s ease-in-out;
 }
+.switch.walker-pic{
+  -webkit-filter: grayscale(90%);
+z-index: -99px;
+
+}
 .thumb-district{
   margin-top:-15px;
   font-size:25px;
