transferred all data into one json file but not using yet, deleted extra data files, condensed some jquery prints into a function

--- a/css/styles.css
+++ b/css/styles.css
@@ -98,9 +98,12 @@ float:left;
 
 /*buttons*/
 .picwid{
-  height:200px;
+  /*height:200px;
   width:150px;
-  padding:20px;
+  padding:20px;*/
+  height:100px;
+  width:75px;
+  padding:10px;
   color:transparent;
 }
 .switch{
@@ -209,6 +212,7 @@ color:black;
   margin-bottom:100%;
 }
 .leg-list-col{
+  max-width:100px;
   margin-bottom:10px;
 }
 
